<resources>
    <string name="app_name">TwitterClient</string>
    <string name="tweet_content_hint">What are you thinking?</string>
    <string name="tweet">Tweet</string>
    <string name="clear_tweet">Clear tweets</string>
    <string name="title_activity_login">Sign in</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="failed_to_refresh">Failed to refresh</string>
    <string name="retry">Retry</string>
    <string name="compose">Compose</string>
</resources>
