...
                    android:inputType="textPassword"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/password"
                    tools:hint="Password"
                    android:singleLine="true"/>

            <Button android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_centerHorizontal="true"
                    android:text="@string/Login"
                    tools:text="Login"/>
...
